--- a/Airline Analysis.ipynb
+++ b/Airline Analysis.ipynb
@@ -57,9 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "highest coach price 593.635\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -69,10 +77,15 @@
     "import math\n",
     "\n",
     "## Read in Data\n",
-    "# flight = pd.read_csv(\"flight.csv\")\n",
-    "# print(flight.head())\n",
+    "flight = pd.read_csv(\"flight.csv\")\n",
+    "#print(flight.head())\n",
     "\n",
     "## Task 1\n",
+    "## top 3 largest coach prices\n",
+    "print(\"highest coach price \"+ str(flight['coach_price'].max()))\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -236,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
